kubernetes/utilities/changedetection/changedetection-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: changedetection
  namespace: utilities-priv
spec:
  selector:
    app: changedetection
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: playwright-chrome
  namespace: utilities-priv
spec:
  selector:
    app: playwright-chrome
  ports:
  - port: 3000
    targetPort: 3000
